[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/diana.png" type="Texture" id=1]
[ext_resource path="res://Diana.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.2971

[node name="Diana" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="Rotater" type="Node2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Diana_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Diana_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
